--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<title>Jquery</title>
 </head>
 <body>
+<div class="terceraparte inline-block">
+<button>iniciar</button> <button>parar</button>
+	<div id = "cuadrado"> 
+	<div id = "circulo"> </div>
+	</div>
+</div>
+<div></div>
+<div></div>
+<div></div>
 
 </body>
 </html>
