--- a/Practica/index.html
+++ b/Practica/index.html
@@ -3,11 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<script src="js/jquery-2.2.1.js"></script>
+    <script src="js/jquery-ui-1.11.4.custom/jquery-ui.js"></script>
+    <script type="text/javascript" src="funciones.js"></script>
+
+
 	<title>Jquery</title>
 </head>
 <body>
 <div class="terceraparte inline-block">
-<button>iniciar</button> <button>parar</button>
+<button id="iniciar">iniciar</button> <button>parar</button><br>
 	<div id = "cuadrado"> 
 	<div id = "circulo"> </div>
 	</div>
