--- a/Practica/index.html
+++ b/Practica/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="terceraparte inline-block">
-<button id="iniciar">iniciar</button> <button>parar</button><br>
+<button id="iniciar">iniciar</button> <button id="parar">parar</button><br>
 	<div id = "cuadrado"> 
 	<div id = "circulo"> </div>
 	</div>
