--- a/Practica/index.html
+++ b/Practica/index.html
@@ -6,20 +6,48 @@
 	<script src="js/jquery-2.2.1.js"></script>
     <script src="js/jquery-ui-1.11.4.custom/jquery-ui.js"></script>
     <script type="text/javascript" src="funciones.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/jquery-ui-1.11.4.custom/jquery-ui.min.css">
 
 
 	<title>Jquery</title>
 </head>
-<body>
+<body style="width: 100%; height: 100%;">
+
 <div class="terceraparte inline-block">
 <button id="iniciar">iniciar</button> <button id="parar">parar</button><br>
 	<div id = "cuadrado"> 
 	<div id = "circulo"> </div>
 	</div>
 </div>
-<div></div>
-<div></div>
-<div></div>
+
+	<div id="datos">
+		<p>Introduce tu nombre: </p>
+		<input id="name" type="text" title="tu nombre Guap@">
+		<p>Fecha: </p>
+		<input id="date" type="text" title="fecha Guapa@"><br><br>
+
+		<button id="aceptar">Aceptar</button>
+	</div>
+
+		<div id="creditos" class="inline-block">
+			<img id="logo"src="logo.png">
+			<p>Universidad Politécnica de Chiapas</p>
+			<p>Ingenieria en Desarrollo de Software</p>
+			<p>Programación Web</p>
+			<p id="nombre">Nombre: </p>
+			<p id="fecha">Fecha: </p>
+		</div>	
+
+
+	<div id="figuras" class="">
+		<button id="mostrar">!Fade</button>
+		<button id="ocultar">!Hide</button>
+		<div id="figura_1"></div>
+		<div id="figura_2"></div>
+		<div id="figura_3"></div>
+
+	</div>
+
 
 </body>
 </html>
